# boxcast

./: .gitattributes  .gitignore  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_edit.rs  catalog.rs  commands.rs  db.rs  lib.rs  library.rs  main.rs  modal.rs  proxy.rs  radio.rs  state.rs  youtube.rs
src/api/: client.ts  types.ts
src/components/: AudioEditor.tsx  AudioMenu.tsx  ChannelList.tsx  ContextMenu.tsx  FilterChips.tsx  GlobalContextMenu.tsx  LibraryMode.tsx  Logo.tsx  Player.tsx  RadioMode.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  SubtitleMenu.tsx  TitleBar.tsx  Toast.tsx  Toolbar.tsx  Tooltip.tsx  TransportBar.tsx  WindowControls.tsx  YouTubeMode.tsx
src/hooks/: useAudioPeaks.ts  useCatalog.ts  useFavorites.ts  useHlsPlayer.ts  useKeyboardShortcuts.ts  useMergedSources.ts  useProxyBase.ts  useSuppressNativeMenu.ts  useYouTubePlayer.ts  useZoom.ts
src/lib/: accent.ts  downloaderStub.tsx  filter.ts  icons.tsx  modalWindow.ts  monogram.ts  os.ts  uiState.ts  window.ts  youtube.ts  ytCollections.ts  ytDedupe.ts  ytGroups.ts
src/store/: player.ts
src/windows/: ModalWindowHost.tsx
