[package]
name = "boxcast"
version = "0.1.0"
description = "Live TV, radio, and YouTube in one desktop app."
authors = ["alesloa"]
edition = "2021"
license = "MIT"

[lib]
name = "media_boxcast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli"] }
rusqlite = { version = "0.32", features = ["bundled"] }
url = "2"
urlencoding = "2"
regex = "1"
once_cell = "1"
anyhow = "1"
futures-util = "0.3"
rand = "0.8"
lofty = "0.21"
walkdir = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
trash = "5"

[features]
downloader = []
